:bug: fix: 페이지네이션 다음 페이지가 없어도 nextCursor가 존재하는 버그 해결